DaCapo deep-dive: 11/15 benchmarks PASS with ~1.4x median overhead
Five distinct root causes fixed. Net effect on the instrumented JDK:
baseline had 0/N passing; now 11 of 15 attempted benchmarks pass end-
to-end with the crochet agent attached, median steady-state overhead
~1.4x at -n 3 small.

Root causes fixed in this commit:

(1) ASM's ClassWriter.getCommonSuperClass called Class.forName, which
    either failed (agent classloader can't see user classes) or
    recursively triggered class loading while a transform was in flight.
    SafeClassWriter subclass overrides it with a resource-stream-based
    superchain walker that parses class files via a throwaway
    ClassReader. Never invokes forName. Falls back to java/lang/Object
    when truly unresolvable. This fix alone unblocked avrora, sunflow,
    pmd, and several others (they were hitting
    TypeNotPresentException: Type cck/util/Option\$Str not present,
    slash-form being a symptom of the forName path, not a bug in our
    emission).

(2) Pre-Java-6 class files (major < 50, commons-logging 1.x at
    major=45) mix JSR/RET subroutines with our StackMapTable-bearing
    injected methods — the inference verifier rejects. transform()
    reads bytes 6-7 of the buffer for the major version and skips
    when < 50.

(3) Stacking multiple LocalVariablesSorter instances across visitors
    produced cumulative local-index rewrites that confused
    COMPUTE_FRAMES on large methods (fop's FObj, h2's Parser.parseCreate,
    batik's AbstractSVGGradientElementBridge). Visible as
    VerifyError "Bad local variable type" at aload N where slot N had
    been reassigned.
    Fix: every visitor now runs LVS-free.
    * FieldAccessWrapper 2-slot PUTFIELD: DUP2_X1; POP2; DUP_X2;
      INVOKEVIRTUAL; POP for the swap-back.
    * StaticFieldRewriter GETSTATIC/PUTSTATIC: emit helper lookup as
      ldc+invokestatic+invokevirtual with zero scratch locals — each
      call pushes a 1-slot ref and pops it again, leaving the
   